cluster2/kubernetes-dashboard/auth/ingressRoute_auth_kubernetes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-oauth2-redirect
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`oauth.kubernetes2.test`) && PathPrefix(`/`)"
    kind: Rule
    services:
    - name: kubernetes-oauth2-proxy
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-oauth2-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: "Host(`kubernetes2.test`) && PathPrefix(`/oauth2/`)"
    kind: Rule
    services:
    - name: kubernetes-oauth2-proxy
      port: 80
